fixed some layout issues with merge

--- a/themes/afterclass2/scss/layout/_layout.scss
+++ b/themes/afterclass2/scss/layout/_layout.scss
@@ -17,7 +17,7 @@ input.division-search-input[type="search"], input.division-search-input[type="se
 .row{
     max-width: 1140px;
     @media only screen and (min-width: 1300px) { 
-        max-width: 1200px;
+        max-width: 1280px;
 
     }
 }
